# market-regime-router

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
docs/: architecture.md  learning_log.md
reports/market_cluster_sandbox/: cluster_hypotheses.md  cluster_profile.csv
research/: market_cluster_sandbox.py
src/market_regime_router/: __init__.py  cli.py  config.py  pipeline.py  reporting.py  router.py
src/market_regime_router/backtest/: engine.py  metrics.py
src/market_regime_router/data/: __init__.py  ingest.py  normalize.py
src/market_regime_router/features/: build.py
src/market_regime_router/regimes/: __init__.py  detector.py  label_mapping.py
src/market_regime_router/strategies/: __init__.py  base.py  mean_reversion.py  risk_off.py  trend.py
tests/: test_backtest_engine.py  test_config.py  test_detector.py  test_execution.py  test_features.py  test_ingest.py  test_normalize.py  test_pipeline.py  test_regime_mapping.py  test_router.py  test_strategies.py
