[project]
name = "market-regime-router"
version = "0.1.0"
description = "Educational crypto market regime detection and strategy routing MVP."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
  { name = "Local research project" }
]
dependencies = [
  "ccxt>=4.4.0",
  "joblib>=1.4.0",
  "matplotlib>=3.9.0",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "pyarrow>=17.0.0",
  "pyyaml>=6.0.0",
  "scikit-learn>=1.5.0",
]

[project.scripts]
mrr = "market_regime_router.cli:main"

[dependency-groups]
dev = [
  "ipykernel>=6.29.0",
  "mypy>=1.11.0",
  "pandas-stubs>=2.2.0",
  "pytest>=8.3.0",
  "ruff>=0.6.0",
  "types-PyYAML>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
